--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.18.0",
+    "react-spinners": "^0.13.8",
     "styled-components": "^6.1.0",
     "yup": "^1.3.2"
   },
